--- a/app/src/main/res/layout/activity_registro_hijo.xml
+++ b/app/src/main/res/layout/activity_registro_hijo.xml
@@ -23,6 +23,24 @@
             android:src="@drawable/projectgps" />
 
         <EditText
+            android:id="@+id/RegistroCodigop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/input"
+            android:hint="Codigo"
+            android:inputType="number"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="#1e8449"
+            android:textColorHint="#1e8449"
+            android:enabled="false"/>
+
+        <EditText
             android:id="@+id/RegistroNombresH"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
