--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -218,6 +218,18 @@
                     app:layout_constraintStart_toEndOf="@id/mailIcon1"
                     app:layout_constraintTop_toBottomOf="@+id/direccion" />
 
+                <TextView
+                    android:id="@+id/codigopadre"
+                    style="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:text=""
+                    android:textColor="#000"
+                    app:layout_constraintBottom_toTopOf="@+id/mailDesc"
+                    app:layout_constraintStart_toEndOf="@id/mailIcon1"
+                    app:layout_constraintTop_toTopOf="@+id/mailIcon1" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
