--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -29,7 +29,7 @@
                 android:icon="@drawable/option"
                 android:title="Actualizar datos"/>
             <item
-                android:id="@+id/menu_opcion_2"
+                android:id="@+id/btnlogout"
                 android:icon="@drawable/option"
                 android:title="Cerrar sesión"/>
         </menu>
