--- a/app/src/main/res/layout/activity_registro_hijo.xml
+++ b/app/src/main/res/layout/activity_registro_hijo.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".RegistroHijo">
 
+    <EditText
+        android:id="@+id/RegistroCodigop"
+        android:layout_width="7dp"
+        android:layout_height="11dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/input"
+        android:enabled="false"
+        android:hint="Codigo"
+        android:inputType="number"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:textColor="#1e8449"
+        android:textColorHint="#1e8449" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,24 +40,6 @@
             android:layout_height="129dp"
             android:contentDescription="TODO"
             android:src="@drawable/projectgps" />
-
-        <EditText
-            android:id="@+id/RegistroCodigop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/input"
-            android:hint="Codigo"
-            android:inputType="number"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:textColor="#1e8449"
-            android:textColorHint="#1e8449"
-            android:enabled="false"/>
 
         <EditText
             android:id="@+id/RegistroNombresH"
