--- a/app/src/main/res/layout/cabecera.xml
+++ b/app/src/main/res/layout/cabecera.xml
@@ -25,13 +25,14 @@
         app:civ_border_width="2dp" />
 
     <TextView
-        android:id="@+id/txtusuario"
+        android:id="@+id/txtusuario1"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/hola"
+        android:cursorVisible="false"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textStyle="bold" />
 
