--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,12 @@
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -98,6 +104,7 @@
                 android:textStyle="bold|italic" />
 
         </LinearLayout>
+        </ScrollView>
     </FrameLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
