--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     tools:context=".Registro">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +23,7 @@
         android:background="#F4F6F7"
         android:gravity="center"
         android:orientation="vertical">
+
 
         <ImageView
             android:layout_width="228dp"
@@ -202,5 +210,7 @@
             android:textColor="#1e8449" />
 
     </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
