--- a/app/src/main/res/layout/cabecera.xml
+++ b/app/src/main/res/layout/cabecera.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,21 +7,29 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/navigat"
-        android:scaleType="centerCrop" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="-1dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/maps" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="149dp"
-        android:layout_height="92dp"
+        android:layout_width="240dp"
+        android:layout_height="198dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="144dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="165dp"
         android:src="@drawable/icono_familia"
-        app:civ_border_color="#FF000000"
+        app:civ_border_color="#66E3F3"
         app:civ_border_width="2dp" />
 
     <TextView
@@ -36,4 +44,4 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textStyle="bold" />
 
-</FrameLayout>
+</RelativeLayout>
