--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,20 +3,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/menu_seccion_1"
-            android:icon="@drawable/menu"
+            android:icon="@drawable/ic_home"
             android:title="Principal" />
         <item
             android:id="@+id/menu_seccion_2"
-            android:icon="@drawable/menu"
+            android:icon="@drawable/ic_registro"
             android:title="Registro del niño" />
 
         <item
             android:id="@+id/menu_seccion_3"
-            android:icon="@drawable/menu"
+            android:icon="@drawable/ic_location"
             android:title="Localización " />
         <item
             android:id="@+id/menu_seccion_4"
-            android:icon="@drawable/menu"
+            android:icon="@drawable/ic_map"
             android:title="Reportes de localización" />
     </group>
 
@@ -25,13 +25,17 @@
         android:title="Otras Opciones">
         <menu>
             <item
-                android:id="@+id/menu_opcion_1"
+                android:id="@+id/btnactualizar"
                 android:icon="@drawable/option"
                 android:title="Actualizar datos"/>
             <item
                 android:id="@+id/btnlogout"
                 android:icon="@drawable/option"
                 android:title="Cerrar sesión"/>
+            <item
+                android:id="@+id/btnacercade"
+                android:icon="@drawable/option"
+                android:title="Acerca de GPS UTEQ"/>
         </menu>
     </item>
 </menu>
